<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetSdkTest</string>
    <string name="action_settings">Settings</string>
    <string name="ip_hint">ip</string>
    <string name="port_hint">端口</string>
    <string name="name_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="preview">预览</string>
    <string name="find_record">查询录像</string>
    <string name="playback">回放</string>
    <string name="device_info">设备信息</string>
    <string name="talkback">语音对讲</string>
    <string name="ptz_control">云台控制</string>
    <string name="left">左</string>
    <string name="up">上</string>
    <string name="right">右</string>
    <string name="down">下</string>

</resources>
