<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <com.hanbang.playsdk.PlaySurfaceView 
        android:id="@+id/surface_video"
        android:layout_width="match_parent"
        android:layout_height="280dp"/>
    
    <Button 
        android:id="@+id/btn_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surface_video"
        android:text="@string/preview"/>
    
    <Button 
        android:id="@+id/btn_talkback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surface_video"
        android:layout_toRightOf="@id/btn_preview"
        android:text="@string/talkback"/>
    
    <Button 
        android:id="@+id/btn_playback"
        android:layout_below="@id/surface_video"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playback"/>
    
    <TextView 
        android:id="@+id/text_ptz"
        android:layout_below="@id/btn_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptz_control"/>
    
    <Button 
        android:id="@+id/btn_up"
        android:layout_below="@id/text_ptz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"/>
    
    <Button 
        android:id="@+id/btn_down"
        android:layout_below="@id/text_ptz"
        android:layout_toRightOf="@id/btn_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"/>
    
    <Button 
        android:id="@+id/btn_left"
        android:layout_below="@id/text_ptz"
        android:layout_toRightOf="@id/btn_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"/>
    
    <Button 
        android:id="@+id/btn_right"
        android:layout_below="@id/text_ptz"
        android:layout_toRightOf="@id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"/>
    
    <Button 
        android:id="@+id/btn_stop"
        android:layout_below="@id/text_ptz"
        android:layout_toRightOf="@id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="停止"/>

</RelativeLayout>
